--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -222,3 +222,15 @@ button {
 #result {
     color: white;
 }
+#simulationStep {
+    color: white;
+}
+#infectedCount {
+    color: white;
+}
+#susceptibleCount {
+    color: white;
+}
+#resistantCount {
+    color: white;
+}
