--- a/templates/index.html
+++ b/templates/index.html
@@ -126,6 +126,9 @@
 
                 <div class="legendRectangles" id="infectedRectangle"></div>
                 <label for="legend" class="legendLabels" id="infectedLabel">Infected</label>
+
+                <div class="legendRectangles" id="deadRectangle"></div>
+                <label for="legend" class="legendLabels" id="deadLabel">Dead</label>
             </div>
 
             <div class="allGraphs">
