--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,16 @@
         <span id="deathRate" class="sliderValues">0.2</span>
         </div>
 
+        <p class="namesOfParameters" id="densityRangeTitle">Population Density(/mi²)</p>
+        <div class="slidersAndValues">
+            <select id="densityRangeDropdown">
+                <option value="0,10000">0 - 10,000</option>
+                <option value="10001,25000">10,001 - 20,000</option>
+                <option value="25001,50000">20,001 - 50,000</option>
+                <option value="50001,inf">50,001 ≥ </option>
+            </select>
+        </div>
+
     </section>
 
     <section class="simulationPanel allPanels" id="simulationContainer">
