--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,6 +1,4 @@
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
-
-
 *{
     margin: 0;
     padding: 0;
@@ -29,7 +27,7 @@ button {
     justify-content: center;
     width: 100%;
 }
-.namesOfParamters{
+.namesOfParameters{
     display: flex;
     justify-content: center;
     margin-top: 7%;
@@ -95,14 +93,10 @@ button {
 .allTheSliders:hover{
     background: rgba(128, 128, 128, 0.4);
 }
-
-
 .simulationPanel{
     height: 99vh;
     width: 49vw;
 }
-
-
 .allPanels{
     background: #251c35;
     border-radius: 8%;
@@ -195,7 +189,6 @@ button {
     margin-right: 3%;
     margin-left: 1%;
 }
-
 #pieChartGraph{
     height: 25%;
     width: 45%;
@@ -213,8 +206,6 @@ button {
     height: 25%;
     width: 40%;
     margin-top: 3%;
-    /* margin-left: 10%;
-    margin-bottom: 5%; */
     margin-right: 40%;
 }
 #polarAreaChartGraph{
@@ -222,24 +213,8 @@ button {
     width: 45%;
     margin-top: 2%;
     margin-right: 40%;
-    /* margin-left: 2%; */
 }
 #result {
-    color: white;
-}
-#simulationStep {
-    color: white;
-}
-#infectedCount {
-    color: white;
-}
-#susceptibleCount {
-    color: white;
-}
-#resistantCount {
-    color: white;
-}
-#deathCount {
     color: white;
 }
 .simulationStats{
@@ -256,6 +231,7 @@ button {
     text-shadow: 0 0 6px rgba(255,255, 255, 0.5);
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
+    color: white;
 }
 #simulationStatsContainer{
     display: flex;
@@ -279,7 +255,7 @@ button {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 1rem;
-    color: rgb(36, 6, 49);
+    color: white;
     text-shadow: 0 0 10px rgb(47, 5, 63);
 }
 #simulationButtonContainer{
@@ -305,6 +281,10 @@ button {
     box-shadow: 0 0 16px rgba(0, 0, 255, 0.5), inset 0 0 10px rgba(0, 0, 0, 0.6);
     color: white;
 }
+.simulationButtons.selected {
+    background-color: rgb(40, 40, 103); 
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.4), inset 0 0 10px rgba(0, 0, 0, 0.4), 0 0 0 3px rgba(0, 0, 255, 0.5);
+}
 #mapContainer {
     height: 80%;
     width: 100%;
@@ -317,3 +297,18 @@ button {
     width: 95%;
     border-radius: 8%;
 }
+#modelSelection {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 1rem; 
+    color: white;
+}
+#densityRangeTitle {
+    display: flex;
+    justify-content: center;
+    margin-top: 7%;
+    margin-bottom: 4%;
+    opacity: 0.6;
+    text-shadow: 0 0 2px rgba(255, 255, 255, 0.8);
+} 
