--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
 
         <p class="namesOfParameters" id="densityRangeTitle">Population Density(mi²)</p>
         <div class="slidersAndValues">
-            <select id="densityRangeDropdown">
+            <select id="densityRangeDropdown" onchange="switchDensityImage()">
                 <option value="0,10000">0 - 10,000</option>
                 <option value="10001,25000">10,001 - 20,000</option>
                 <option value="25001,50000">20,001 - 50,000</option>
