--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -284,30 +284,27 @@ button {
     margin-right: 3%;
     margin-left: 1%;
 }
-#pieChartGraph{
-    height: 25%;
+#pieChartGraph {
+    height: 45%; 
+    width: 75%; 
+    margin: 15% auto 15% auto;
+}
+.rowGraphs {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-grow: 1;
+}
+#lineChartGraph {
+    height: 100%;
+    width: 45%; 
+    margin: 0 2%;
+}
+#barChartGraph {
+    height: 100%;
     width: 45%;
-    margin-top: 3%;
-    margin-left: 40%;
-    
-}
-#barChartGraph{
-    height: 25%;
-    width: 39%;
-    margin-top: 2%;
-    margin-left: 40%;
-}
-#lineChartGraph{
-    height: 25%;
-    width: 40%;
-    margin-top: 3%;
-    margin-right: 40%;
-}
-#polarAreaChartGraph{
-    height: 30%;
-    width: 45%;
-    margin-top: 2%;
-    margin-right: 40%;
+    margin: 0 2%;
 }
 #result {
     color: white;
@@ -330,11 +327,19 @@ button {
 }
 #simulationStatsContainer{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     width: 98%;
-    height: 5%;
     margin-left: 1%;
     margin-right: 1%;
+    padding-top: 10px;
+}
+.statsRow{
+    display: flex;
+    justify-content: space-around;
+    width: 98%;
+    height: 40px;
+    margin-bottom: 10px; 
 }
 .simulationButtons{
     height: 100%;
@@ -382,7 +387,7 @@ button {
 }
 #mapContainer {
     position: relative; /* Set the map container to relative positioning */
-    height: 80%;
+    height: 90%;
     width: 100%;
     display: flex;
     justify-content: center;
